--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "eigen"]
 	path = eigen
-	url = gitosis@goldnerlab.physics.umass.edu:eigen
+	url = git@goldnerlab.physics.umass.edu:eigen
